docs/0.10/_sources/api/gammapy.maps.HpxNDMap.rst.txt
HpxNDMap
========

.. currentmodule:: gammapy.maps

.. autoclass:: HpxNDMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxNDMap.data
      ~HpxNDMap.geom
      ~HpxNDMap.meta
      ~HpxNDMap.quantity
      ~HpxNDMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxNDMap.coadd
      ~HpxNDMap.copy
      ~HpxNDMap.create
      ~HpxNDMap.crop
      ~HpxNDMap.downsample
      ~HpxNDMap.fill_by_coord
      ~HpxNDMap.fill_by_idx
      ~HpxNDMap.fill_by_pix
      ~HpxNDMap.from_geom
      ~HpxNDMap.from_hdu
      ~HpxNDMap.from_hdulist
      ~HpxNDMap.get_by_coord
      ~HpxNDMap.get_by_idx
      ~HpxNDMap.get_by_pix
      ~HpxNDMap.get_image_by_coord
      ~HpxNDMap.get_image_by_idx
      ~HpxNDMap.get_image_by_pix
      ~HpxNDMap.interp_by_coord
      ~HpxNDMap.interp_by_pix
      ~HpxNDMap.iter_by_coord
      ~HpxNDMap.iter_by_image
      ~HpxNDMap.iter_by_pix
      ~HpxNDMap.make_hdu
      ~HpxNDMap.make_wcs_mapping
      ~HpxNDMap.pad
      ~HpxNDMap.plot
      ~HpxNDMap.plot_interactive
      ~HpxNDMap.read
      ~HpxNDMap.reproject
      ~HpxNDMap.set_by_coord
      ~HpxNDMap.set_by_idx
      ~HpxNDMap.set_by_pix
      ~HpxNDMap.slice_by_idx
      ~HpxNDMap.sum_over_axes
      ~HpxNDMap.to_hdulist
      ~HpxNDMap.to_swapped
      ~HpxNDMap.to_ud_graded
      ~HpxNDMap.to_wcs
      ~HpxNDMap.upsample
      ~HpxNDMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: make_wcs_mapping
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
